--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/modificaLavoratoreView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/modificaLavoratoreView.fxml
@@ -23,7 +23,7 @@
    <content>
       <AnchorPane prefHeight="2605.0" prefWidth="1264.0">
          <children>
-            <MFXButton fx:id="ritornaMenu" layoutX="45.0" layoutY="25.0" onAction="#onClickRitornaMenu" text="Indietro" wrapText="true">
+            <MFXButton fx:id="ritornaMenu" layoutX="40.0" layoutY="27.0" onAction="#onClickRitornaMenu" prefHeight="49.0" prefWidth="80.0" text="Indietro" wrapText="true">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></MFXButton>
@@ -227,7 +227,7 @@
                <font>
                   <Font size="20.0" />
                </font></Label>
-            <Label layoutX="601.0" layoutY="87.0" text="Anagrafica">
+            <Label layoutX="601.0" layoutY="112.0" text="Anagrafica">
                <font>
                   <Font size="20.0" />
                </font></Label>
@@ -279,14 +279,20 @@
                   <Label fx:id="listaEsperienzeError" prefHeight="29.0" prefWidth="839.0" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc107" height="115.0" layoutX="901.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
-            <Label alignment="CENTER" layoutX="903.0" prefHeight="115.0" prefWidth="250.0" text="Lavoratori Stagionali" textAlignment="CENTER" wrapText="true">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffecb3" height="100.0" layoutX="650.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
+            <Label fx:id="loginTitleLabel" layoutX="708.0" layoutY="5.0" prefHeight="92.0" prefWidth="135.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc107" height="100.0" layoutX="901.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
+            <Label alignment="CENTER" layoutX="903.0" prefHeight="100.0" prefWidth="250.0" text="Lavoratori Stagionali" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa000" height="115.0" layoutX="1151.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);;" width="115.0" />
-            <ImageView fitHeight="95.0" fitWidth="92.0" layoutX="1163.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa000" height="100.0" layoutX="1151.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);;" width="115.0" />
+            <ImageView fitHeight="95.0" fitWidth="85.0" layoutX="1166.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../img/icon.png" />
                </image>
