--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
@@ -281,7 +281,7 @@
             </VBox>
             <VBox layoutX="422.0" layoutY="1033.0" prefHeight="345.0" prefWidth="792.0">
                <children>
-                  <MFXListView fx:id="listaContattoUrgente" onMouseClicked="#testEvent" prefHeight="319.0" prefWidth="792.0" />
+                  <MFXListView fx:id="listaContattoUrgente" prefHeight="319.0" prefWidth="792.0" />
                   <Label fx:id="listaContattoUrgenteError" prefHeight="32.0" prefWidth="792.0" text="OK" visible="false" wrapText="true" />
                </children>
             </VBox>
